--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -4,4 +4,6 @@
   <package id="MaterialDesignColors" version="2.1.4" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.9.0" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.77" targetFramework="net472" />
+  <package id="System.CodeDom" version="8.0.0" targetFramework="net472" />
+  <package id="System.Management" version="8.0.0" targetFramework="net472" />
 </packages>
