--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -231,6 +231,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Class_\" />
+    <Folder Include="NetShare_\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
