--- a/WpfApp1/message.csproj
+++ b/WpfApp1/message.csproj
@@ -137,17 +137,14 @@
     <Compile Include="DB_\User.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="Page_\Chat.xaml.cs">
-      <DependentUpon>Chat.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Page_\Conversation.xaml.cs">
-      <DependentUpon>Conversation.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Window_\AddConversation.xaml.cs">
       <DependentUpon>AddConversation.xaml</DependentUpon>
     </Compile>
     <Compile Include="Window_\AddNote.xaml.cs">
       <DependentUpon>AddNote.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window_\AddParticipantWindow.xaml.cs">
+      <DependentUpon>AddParticipantWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Window_\AddTask.xaml.cs">
       <DependentUpon>AddTask.xaml</DependentUpon>
@@ -155,8 +152,11 @@
     <Compile Include="Window_\EditProfileWindow.xaml.cs">
       <DependentUpon>EditProfileWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Window_\SendFileWindow.xaml.cs">
-      <DependentUpon>SendFileWindow.xaml</DependentUpon>
+    <Compile Include="Window_\RemoveParticipantWindow.xaml.cs">
+      <DependentUpon>RemoveParticipantWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Window_\UpdateConversationNameWindow.xaml.cs">
+      <DependentUpon>UpdateConversationNameWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Window_\ViewWindow.xaml.cs">
       <DependentUpon>ViewWindow.xaml</DependentUpon>
@@ -173,19 +173,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Page_\Chat.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Page_\Conversation.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Window_\AddConversation.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Window_\AddNote.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window_\AddParticipantWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -197,7 +193,11 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Window_\SendFileWindow.xaml">
+    <Page Include="Window_\RemoveParticipantWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Window_\UpdateConversationNameWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -240,9 +240,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NetShare_\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
