--- a/WpfApp1/message.csproj
+++ b/WpfApp1/message.csproj
@@ -256,6 +256,7 @@
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
     <Content Include="DB_\sqlscroiptver5.sql" />
+    <Resource Include="Image_\clip.png" />
     <Resource Include="Image_\logoG.png" />
     <Resource Include="logoiso.ico" />
     <Resource Include="Image_\yes.png" />
